IRtest_out/90_max_container.err
irs/90_max_container.ll:42:29: error: invalid getelementptr indices
  %v39 = getelementptr i32, i32* %v11, i32 0, i32 %v38
                            ^
1 error generated.
